HW0 Optional2
- added filteredByStreamsOptional()